// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetQuickAction.vue should render open dropdown with actions for locked datasets 1`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select is-active"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <div class="quick-actions-dropdown is-active">
    <h6 class="quick-actions-title text is-semibold is-xsmall is-txtSoftGrey">QuickActions.title</h6>
    <ul>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.duplicate</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.unlock</a></li>
    </ul>
  </div>
</div>
`;

exports[`DatasetQuickAction.vue should render open dropdown with all actions for non shared non locked datasets 1`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select is-active"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <div class="quick-actions-dropdown is-active">
    <h6 class="quick-actions-title text is-semibold is-xsmall is-txtSoftGrey">QuickActions.title</h6>
    <ul>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.createMap</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.editInfo</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.manageTags</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.changePrivacy</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.share</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.duplicate</a></li>
      <li><a href="#" class="action text is-caption is-txtPrimary">QuickActions.lock</a></li>
      <li><a href="#" class="action text is-caption is-txtAlert">QuickActions.delete</a></li>
    </ul>
  </div>
</div>
`;
